# rio-terrain

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  pixi.toml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: condapackage.yml  pythonpackage.yml  pythonpublish.yml  pythonrelease.yml
ci/: cli-help.ps1
ci/appveyor/: deploy_to_anaconda.ps1  deploy_to_anaconda2.ps1
conda-build/: environment.yml  meta.yaml
conda-recipe/: meta.yaml
docs/: conf.py  requirements.txt
docs/source/: cli-click.rst  cli.rst  click.rst  conf.py  index.rst
docs/source/api/: index.rst  modules.rst  rio_terrain.rst  terrain.rst
docs/source/cli/: cli.aspect.txt  cli.curvature.txt  cli.difference.txt  cli.extract.txt  cli.label.txt  cli.mad.txt  cli.quantiles.txt  cli.rio.txt  cli.slice.txt  cli.slope.txt  cli.std.txt  cli.threshold.txt  cli.uncertainty.txt
rio_terrain/: __init__.py  _version.py
rio_terrain/cli/: aspect.py  compare.py  copynodata.py  curvature.py  difference.py  extract.py  fillnodata.py  label.py  labelbounds.py  mad.py  quantiles.py  slice.py  slope.py  std.py  subdivide.py  threshold.py  uncertainty.py
rio_terrain/core/: focalstatistics.py  statistics.py  terrain.py  windowing.py
rio_terrain/tests/: conftest.py  test_cli.py  test_terrain.py  test_windowing.py
rio_terrain/tests/data/: dem_100m.tif  dem_20m.tif  dem_5m.tif  ref_gdal_aspect_azim_100m.tif  ref_gdal_aspect_trig_100m.tif  ref_gdal_slope_degrees_100m.tif  ref_gdal_slope_percent_100m.tif  ref_richdem_curvature_total_100m.tif  ref_richdem_slope_degrees_100m.tif  ref_richdem_slope_percent_100m.tif  ref_richdem_slope_riserun_100m.tif
rio_terrain/tools/: messages.py  numbers.py
terrain/: __init__.py
terrain/cli/: aspect.py  curvature.py  difference.py  extract.py  mad.py  quantiles.py  slice.py  slope.py  std.py  threshold.py  uncertainty.py
terrain/core/: focalstatistics.py
terrain/tests/: test_cli.py
